crates/analyzer/tests/snapshots/errors__self_type_misuse.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: failed to parse type description
   ┌─ compile_errors/self_type_misuse.fe:17:26
   │
17 │ type InvalidTuple = (u8, Self)
   │                          ^^^^ unexpected token

error: `Self` can not be used here
  ┌─ compile_errors/self_type_misuse.fe:7:14
  │
7 │ impl Foo for Self {
  │              ^^^^

error: `Self` can not be used here
   ┌─ compile_errors/self_type_misuse.fe:13:10
   │
13 │     foo: Self
   │          ^^^^


